SmtLib25Parser.py
# Generated from SmtLib25.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SmtLib25Parser ( Parser ):

    grammarFileName = "SmtLib25.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':produce-models'", "':auto-config'", 
                     "'('", "'assert'", "')'", "'check-sat'", "'declare-const'", 
                     "'declare-fun'", "'define-fun'", "'exit'", "'get-model'", 
                     "'set-logic'", "'set-info'", "'set-option'", "'_'", 
                     "'as'", "'let'", "'forall'", "'exists'", "'!'", "'error'", 
                     "'sat\n'", "'unsat\n'", "'timeout\n'", "'unknown\n'", 
                     "'model'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INTEGER", 
                      "B_VALUE", "STRINGCONSTANT", "SYMBOL", "KEYWORD", 
                      "WS" ]

    RULE_smtfile = 0
    RULE_script = 1
    RULE_option = 2
    RULE_command = 3
    RULE_fun_def = 4
    RULE_numeral = 5
    RULE_boolean = 6
    RULE_string = 7
    RULE_spec_constant = 8
    RULE_s_expr = 9
    RULE_identifier = 10
    RULE_index = 11
    RULE_sort = 12
    RULE_attribute_value = 13
    RULE_attribute = 14
    RULE_qual_identifier = 15
    RULE_var_binding = 16
    RULE_sorted_var = 17
    RULE_term = 18
    RULE_response = 19
    RULE_error_response = 20
    RULE_check_sat_response = 21
    RULE_get_model_response = 22
    RULE_model_response = 23

    ruleNames =  [ "smtfile", "script", "option", "command", "fun_def", 
                   "numeral", "boolean", "string", "spec_constant", "s_expr", 
                   "identifier", "index", "sort", "attribute_value", "attribute", 
                   "qual_identifier", "var_binding", "sorted_var", "term", 
                   "response", "error_response", "check_sat_response", "get_model_response", 
                   "model_response" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    INTEGER=27
    B_VALUE=28
    STRINGCONSTANT=29
    SYMBOL=30
    KEYWORD=31
    WS=32

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SmtfileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def script(self):
            return self.getTypedRuleContext(SmtLib25Parser.ScriptContext,0)


        def response(self):
            return self.getTypedRuleContext(SmtLib25Parser.ResponseContext,0)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_smtfile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmtfile" ):
                listener.enterSmtfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmtfile" ):
                listener.exitSmtfile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSmtfile" ):
                return visitor.visitSmtfile(self)
            else:
                return visitor.visitChildren(self)




    def smtfile(self):

        localctx = SmtLib25Parser.SmtfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_smtfile)
        try:
            self.state = 50
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.script()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.response()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmtLib25Parser.CommandContext)
            else:
                return self.getTypedRuleContext(SmtLib25Parser.CommandContext,i)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = SmtLib25Parser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmtLib25Parser.T__2:
                self.state = 52
                self.command()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean(self):
            return self.getTypedRuleContext(SmtLib25Parser.BooleanContext,0)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOption" ):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)




    def option(self):

        localctx = SmtLib25Parser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_option)
        try:
            self.state = 62
            token = self._input.LA(1)
            if token in [SmtLib25Parser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(SmtLib25Parser.T__0)
                self.state = 59
                self.boolean()

            elif token in [SmtLib25Parser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(SmtLib25Parser.T__1)
                self.state = 61
                self.boolean()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(SmtLib25Parser.TermContext,0)


        def SYMBOL(self):
            return self.getToken(SmtLib25Parser.SYMBOL, 0)

        def sort(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmtLib25Parser.SortContext)
            else:
                return self.getTypedRuleContext(SmtLib25Parser.SortContext,i)


        def fun_def(self):
            return self.getTypedRuleContext(SmtLib25Parser.Fun_defContext,0)


        def attribute(self):
            return self.getTypedRuleContext(SmtLib25Parser.AttributeContext,0)


        def option(self):
            return self.getTypedRuleContext(SmtLib25Parser.OptionContext,0)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = SmtLib25Parser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.state = 117
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(SmtLib25Parser.T__2)
                self.state = 65
                self.match(SmtLib25Parser.T__3)
                self.state = 66
                self.term()
                self.state = 67
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(SmtLib25Parser.T__2)
                self.state = 70
                self.match(SmtLib25Parser.T__5)
                self.state = 71
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.match(SmtLib25Parser.T__2)
                self.state = 73
                self.match(SmtLib25Parser.T__6)
                self.state = 74
                self.match(SmtLib25Parser.SYMBOL)
                self.state = 75
                self.sort()
                self.state = 76
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.match(SmtLib25Parser.T__2)
                self.state = 79
                self.match(SmtLib25Parser.T__7)
                self.state = 80
                self.match(SmtLib25Parser.SYMBOL)
                self.state = 81
                self.match(SmtLib25Parser.T__2)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SmtLib25Parser.T__2 or _la==SmtLib25Parser.SYMBOL:
                    self.state = 82
                    self.sort()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 88
                self.match(SmtLib25Parser.T__4)
                self.state = 89
                self.sort()
                self.state = 90
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.match(SmtLib25Parser.T__2)
                self.state = 93
                self.match(SmtLib25Parser.T__8)
                self.state = 94
                self.fun_def()
                self.state = 95
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.match(SmtLib25Parser.T__2)
                self.state = 98
                self.match(SmtLib25Parser.T__9)
                self.state = 99
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 100
                self.match(SmtLib25Parser.T__2)
                self.state = 101
                self.match(SmtLib25Parser.T__10)
                self.state = 102
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 103
                self.match(SmtLib25Parser.T__2)
                self.state = 104
                self.match(SmtLib25Parser.T__11)
                self.state = 105
                self.match(SmtLib25Parser.SYMBOL)
                self.state = 106
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 107
                self.match(SmtLib25Parser.T__2)
                self.state = 108
                self.match(SmtLib25Parser.T__12)
                self.state = 109
                self.attribute()
                self.state = 110
                self.match(SmtLib25Parser.T__4)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 112
                self.match(SmtLib25Parser.T__2)
                self.state = 113
                self.match(SmtLib25Parser.T__13)
                self.state = 114
                self.option()
                self.state = 115
                self.match(SmtLib25Parser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fun_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SmtLib25Parser.SYMBOL, 0)

        def sort(self):
            return self.getTypedRuleContext(SmtLib25Parser.SortContext,0)


        def term(self):
            return self.getTypedRuleContext(SmtLib25Parser.TermContext,0)


        def sorted_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmtLib25Parser.Sorted_varContext)
            else:
                return self.getTypedRuleContext(SmtLib25Parser.Sorted_varContext,i)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_fun_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFun_def" ):
                listener.enterFun_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFun_def" ):
                listener.exitFun_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_def" ):
                return visitor.visitFun_def(self)
            else:
                return visitor.visitChildren(self)




    def fun_def(self):

        localctx = SmtLib25Parser.Fun_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fun_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SmtLib25Parser.SYMBOL)
            self.state = 120
            self.match(SmtLib25Parser.T__2)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmtLib25Parser.T__2:
                self.state = 121
                self.sorted_var()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(SmtLib25Parser.T__4)
            self.state = 128
            self.sort()
            self.state = 129
            self.term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumeralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(SmtLib25Parser.INTEGER, 0)

        def getRuleIndex(self):
            return SmtLib25Parser.RULE_numeral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumeral" ):
                listener.enterNumeral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumeral" ):
                listener.exitNumeral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumeral" ):
                return visitor.visitNumeral(self)
            else:
                return visitor.visitChildren(self)




    def numeral(self):

        localctx = SmtLib25Parser.NumeralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_numeral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(SmtLib25Parser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooleanContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def B_VALUE(self):
            return self.getToken(SmtLib25Parser.B_VALUE, 0)

        def getRuleIndex(self):
            return SmtLib25Parser.RULE_boolean

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean" ):
                listener.enterBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean" ):
                listener.exitBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)




    def boolean(self):

        localctx = SmtLib25Parser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_boolean)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(SmtLib25Parser.B_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGCONSTANT(self):
            return self.getToken(SmtLib25Parser.STRINGCONSTANT, 0)

        def getRuleIndex(self):
            return SmtLib25Parser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = SmtLib25Parser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(SmtLib25Parser.STRINGCONSTANT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Spec_constantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numeral(self):
            return self.getTypedRuleContext(SmtLib25Parser.NumeralContext,0)


        def string(self):
            return self.getTypedRuleContext(SmtLib25Parser.StringContext,0)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_spec_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec_constant" ):
                listener.enterSpec_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec_constant" ):
                listener.exitSpec_constant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec_constant" ):
                return visitor.visitSpec_constant(self)
            else:
                return visitor.visitChildren(self)




    def spec_constant(self):

        localctx = SmtLib25Parser.Spec_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_spec_constant)
        try:
            self.state = 139
            token = self._input.LA(1)
            if token in [SmtLib25Parser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.numeral()

            elif token in [SmtLib25Parser.STRINGCONSTANT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.string()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class S_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spec_constant(self):
            return self.getTypedRuleContext(SmtLib25Parser.Spec_constantContext,0)


        def SYMBOL(self):
            return self.getToken(SmtLib25Parser.SYMBOL, 0)

        def KEYWORD(self):
            return self.getToken(SmtLib25Parser.KEYWORD, 0)

        def s_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmtLib25Parser.S_exprContext)
            else:
                return self.getTypedRuleContext(SmtLib25Parser.S_exprContext,i)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_s_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS_expr" ):
                listener.enterS_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS_expr" ):
                listener.exitS_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS_expr" ):
                return visitor.visitS_expr(self)
            else:
                return visitor.visitChildren(self)




    def s_expr(self):

        localctx = SmtLib25Parser.S_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_s_expr)
        self._la = 0 # Token type
        try:
            self.state = 152
            token = self._input.LA(1)
            if token in [SmtLib25Parser.INTEGER, SmtLib25Parser.STRINGCONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.spec_constant()

            elif token in [SmtLib25Parser.SYMBOL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(SmtLib25Parser.SYMBOL)

            elif token in [SmtLib25Parser.KEYWORD]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(SmtLib25Parser.KEYWORD)

            elif token in [SmtLib25Parser.T__2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.match(SmtLib25Parser.T__2)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmtLib25Parser.T__2) | (1 << SmtLib25Parser.INTEGER) | (1 << SmtLib25Parser.STRINGCONSTANT) | (1 << SmtLib25Parser.SYMBOL) | (1 << SmtLib25Parser.KEYWORD))) != 0):
                    self.state = 145
                    self.s_expr()
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 151
                self.match(SmtLib25Parser.T__4)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SmtLib25Parser.SYMBOL, 0)

        def index(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmtLib25Parser.IndexContext)
            else:
                return self.getTypedRuleContext(SmtLib25Parser.IndexContext,i)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = SmtLib25Parser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.state = 165
            token = self._input.LA(1)
            if token in [SmtLib25Parser.SYMBOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(SmtLib25Parser.SYMBOL)

            elif token in [SmtLib25Parser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(SmtLib25Parser.T__2)
                self.state = 156
                self.match(SmtLib25Parser.T__14)
                self.state = 157
                self.match(SmtLib25Parser.SYMBOL)
                self.state = 159 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 158
                    self.index()
                    self.state = 161 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SmtLib25Parser.INTEGER or _la==SmtLib25Parser.SYMBOL):
                        break

                self.state = 163
                self.match(SmtLib25Parser.T__4)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IndexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numeral(self):
            return self.getTypedRuleContext(SmtLib25Parser.NumeralContext,0)


        def SYMBOL(self):
            return self.getToken(SmtLib25Parser.SYMBOL, 0)

        def getRuleIndex(self):
            return SmtLib25Parser.RULE_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex" ):
                listener.enterIndex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex" ):
                listener.exitIndex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex" ):
                return visitor.visitIndex(self)
            else:
                return visitor.visitChildren(self)




    def index(self):

        localctx = SmtLib25Parser.IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_index)
        try:
            self.state = 169
            token = self._input.LA(1)
            if token in [SmtLib25Parser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.numeral()

            elif token in [SmtLib25Parser.SYMBOL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.match(SmtLib25Parser.SYMBOL)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SortContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SmtLib25Parser.IdentifierContext,0)


        def sort(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmtLib25Parser.SortContext)
            else:
                return self.getTypedRuleContext(SmtLib25Parser.SortContext,i)


        def getRuleIndex(self):
            return SmtLib25Parser.RULE_sort

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSort" ):
                listener.enterSort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSort" ):
                listener.exitSort(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSort" ):
                return visitor.visitSort(self)
            else:
                return visitor.visitChildren(self)




    def sort(self):

        localctx = SmtLib25Parser.SortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_sort)
        self._la = 0 # Token type
        try:
            self.state = 181
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.identifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(SmtLib25Parser.T__2)
                self.state = 173
                self.identifier()
                self.state = 175 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 174
                    self.sort()
                    self.state = 177 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SmtLib25Parser.T__2 or _la==SmtLib25Parser.SYMBOL):
                        break

                self.state = 179
                self.match(SmtLib25Parser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Attribute_valueContext(ParserRuleContext):
